Configure option --enable-perf causes jit-test failures.
Categories
(Core :: JavaScript Engine: JIT, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox122 | --- | fixed |
People
(Reporter: nbp, Assigned: denispal)
References
(Blocks 1 open bug)
Details
Attachments
(2 files)
Currently, running the jit-test with a build configured using --enable-perf yields 314 failures.
One problem which is not highlighted by the test suite, is that if we have any differential behavior such as a Segmentation Fault, then we might have other forms of differential behavior which might suggest that the performance profiles collected are no longer representative of the ordinary behavior.
Thus, either we should fix it our implementation of this instrumentation, or remove it as it might not be representative.
| Assignee | ||
Updated•2 years ago
|
| Assignee | ||
Comment 1•1 year ago
|
||
| Assignee | ||
Comment 2•1 year ago
|
||
We are missing a check for rectifier->blinterp entry. This change should be functionally the same as before but I seperated out the checks for rectifier and baseline interpreter entry so it's easier to read.
Depends on D195476
Comment 4•1 year ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/fc9ff49f0375
https://hg.mozilla.org/mozilla-central/rev/f3c421ea4016
Description
•