Bug 1831286: Handle OOM during interpreter entry trampoline generation. r=iain

Differential Revision: https://phabricator.services.mozilla.com/D195476